--- a/src/xsl/l10n/en.xml
+++ b/src/xsl/l10n/en.xml
@@ -10,7 +10,7 @@
   <entry key="xr:Buyer_country_code" id="BT-55">Country code</entry> <!-- Country -->
   <entry key="xr:Buyer_identifier" id="BT-46">Identifier</entry>
   <entry key="xr:Buyer_identifier/@scheme_identifier" id="BT-46">Scheme identifier</entry>
-  <entry key="xr:Buyer_contact_point" id="BT-56">Contact point</entry>
+  <entry key="xr:Buyer_contact_point" id="BT-56">Contact point</entry> <!-- Name -->
   <entry key="xr:Buyer_contact_telephone_number" id="BT-57">Contact point phone</entry> <!-- Phone -->
   <entry key="xr:Buyer_contact_email_address" id="BT-58">Contact point email</entry> <!-- E-Mail address -->
   <entry key="xr:Seller_name" id="BT-27">Company name</entry>
@@ -23,7 +23,7 @@
   <entry key="xr:Seller_country_code" id="BT-40">Country code</entry>
   <entry key="xr:Seller_identifier" id="BT-29">Identifier</entry>
   <entry key="xr:Seller_identifier/@scheme_identifier" id="BT-29">Scheme identifier</entry>
-  <entry key="xr:Seller_contact_point" id="BT-41">Contact point</entry>
+  <entry key="xr:Seller_contact_point" id="BT-41">Contact point</entry> <!-- Name -->
   <entry key="xr:Seller_contact_telephone_number" id="BT-42">Contact point phone</entry> <!-- Phone -->
   <entry key="xr:Seller_contact_email_address" id="BT-43">Contact point email</entry> <!-- E-Mail address -->
   <entry key="xr:Invoice_number" id="BT-1">Invoice number</entry>
@@ -39,7 +39,7 @@
   <entry key="xr:Invoicing_period_end_date" id="BT-74">To</entry> <!-- to -->
   <entry key="xr:Preceding_Invoice_reference" id="BT-25">Invoice number</entry>
   <entry key="xr:Preceding_Invoice_issue_date" id="BT-26">Invoice date</entry>
-  <entry key="xr:Sum_of_Invoice_line_net_amount" id="BT-106">Total invoice line net amounts</entry>
+  <entry key="xr:Sum_of_Invoice_line_net_amount" id="BT-106">Total invoice line amounts</entry>
   <entry key="xr:Sum_of_allowances_on_document_level" id="BT-107">Total allowances</entry>
   <entry key="xr:Sum_of_charges_on_document_level" id="BT-108">Total charges</entry>
   <entry key="xr:Invoice_total_amount_without_VAT" id="BT-109">Total amount</entry>
@@ -59,7 +59,7 @@
   <entry key="xr:Document_level_allowance_VAT_category_code" id="BT-95">Allowance VAT category code</entry>
   <entry key="xr:Document_level_allowance_base_amount" id="BT-93">Base amount</entry>
   <entry key="xr:Document_level_allowance_percentage" id="BT-94">Percentage</entry>
-  <entry key="xr:Document_level_allowance_amount" id="BT-92">Amount</entry>
+  <entry key="xr:Document_level_allowance_amount" id="BT-92">Amount</entry> <!-- Discount -->
   <entry key="xr:Document_level_allowance_VAT_rate" id="BT-96">Allowance VAT rate</entry>
   <entry key="xr:Document_level_allowance_reason" id="BT-97">Allowance reason</entry> <!-- Reason for the discount -->
   <entry key="xr:Document_level_allowance_reason_code" id="BT-98">Allowance reason code</entry>
@@ -67,11 +67,11 @@
   <entry key="xr:Document_level_charge_VAT_category_code" id="BT-102">Charge VAT category code</entry>
   <entry key="xr:Document_level_charge_base_amount" id="BT-100">Base amount</entry>
   <entry key="xr:Document_level_charge_percentage" id="BT-101">Percentage</entry>
-  <entry key="xr:Document_level_charge_amount" id="BT-99">Amount</entry>
+  <entry key="xr:Document_level_charge_amount" id="BT-99">Amount</entry> <!-- Surcharge -->
   <entry key="xr:Document_level_charge_VAT_rate" id="BT-103">VAT rate</entry> <!-- <entry key="Umsatzsteuersatz des Zuschlages">Umsatzsteuersatz des Zuschlages</entry> -->
   <entry key="xr:Document_level_charge_reason" id="BT-104">Charge Reason</entry>
   <entry key="xr:Document_level_charge_reason_code" id="BT-105">Charge reason code</entry>
-  <entry key="xr:Payment_terms" id="BT-20">Payment terms</entry>
+  <entry key="xr:Payment_terms" id="BT-20">Payment terms</entry> <!-- <entry key="Skonto; weitere Zahlungsbedingungen">Discount; other payment terms</entry> -->
   <entry key="xr:Payment_due_date" id="BT-9">Due date</entry>
   <entry key="xr:Payment_means_type_code" id="BT-81">Payment means type code</entry> <!-- Code for the payment means -->
   <entry key="xr:Payment_means_text" id="BT-82">Payment means</entry>
@@ -86,7 +86,7 @@
   <entry key="xr:Payment_account_name" id="BT-85">Account holder</entry>
   <entry key="xr:Payment_account_identifier" id="BT-84">Account identifier</entry> <!-- IBAN -->
   <entry key="xr:Payment_service_provider_identifier" id="BT-86">BIC</entry>
-  <entry key="xr:Invoice_note_subject_code" id="BT-21">Subject code</entry>
+  <entry key="xr:Invoice_note_subject_code" id="BT-21">Subject code</entry> <!-- <entry key="Betreff">Reference</entry> -->
   <entry key="xr:Invoice_note" id="BT-22">Note</entry> <!-- Note -->
   <!-- BG-4 Seller and others -->
   <entry key="xr:Seller_trading_name" id="BT-28">Different trading name</entry>
@@ -153,7 +153,9 @@
   <entry key="xr:Attached_document/@mime_code" id="BT-125_mime_code">MIME type of the attached document</entry> <!-- Attachment document format -->
   <entry key="xr:Attached_document/@filename" id="BT-125_filename">Name of the attachment document</entry>
   <entry key="xrv:timestamp">Date / time</entry>
-  <entry key="xrv:subject">Subject</entry>
+  <!-- 
+    <entry key="xrv:subject">Subject</entry>
+  -->
   <entry key="xrv:text">Text</entry>
   <entry key="xrv:details">Details</entry>
   <entry key="xr:Invoice_line_identifier" id="BT-126">Identifier</entry>
@@ -200,9 +202,9 @@
   <entry key="uebersichtVerkaeufer" id="BG-4">Information about the seller</entry>
   <entry key="uebersichtRechnungsInfo" id="invoice-data">Invoice data</entry>
   <entry key="uebersichtRechnungsuebersicht" id="BG-22">Invoice totals</entry>
-  <entry key="uebersichtUmsatzsteuer" id="BG-23">VAT Breakdown</entry>
-  <entry key="uebersichtNachlass" id="BG-20">Allowances at invoice level</entry>
-  <entry key="uebersichtZuschlaege" id="BG-21">Charges at invoice level</entry>
+  <entry key="uebersichtUmsatzsteuer" id="BG-23">VAT Breakdown</entry> <!-- <entry key="Aufschlüsselung der Umsatzsteuer auf Ebene der Rechnung">Sales tax breakdown at invoice level</entry> -->
+  <entry key="uebersichtNachlass" id="BG-20">Allowances at invoice level</entry> <!-- <entry key="Nachlass auf Ebene der Rechnung">Invoice level discount</entry> -->
+  <entry key="uebersichtZuschlaege" id="BG-21">Charges at invoice level</entry> <!-- <entry key="Zuschlag auf Ebene der Rechnung">Invoice level surcharge</entry> -->
   <entry key="uebersichtRechnungAbrechnungszeitraum">Billing period</entry>
   <entry key="uebersichtRechnungPreviousBechungen">Previous invoices</entry>
   <entry key="uebersichtZahlungInfo" id="BG-4">Payment data</entry>
@@ -216,7 +218,7 @@
   <entry key="detailsPositionNachlaesse" id="BG-27">Allowances on invoice item level</entry>
   <entry key="detailsPositionZuschlaege" id="BG-28">Charges at invoice item level</entry>
   <entry key="detailsPositionArtikelinformationen" id="BG-31">Item information</entry>
-  <entry key="detailsPositionArtikeleigenschaften" id="BG-32">Item properties</entry>
+  <entry key="detailsPositionArtikeleigenschaften" id="BG-32">Item properties</entry> <!-- Properties of the item -->
   <entry key="zusaetze">Supplements</entry>
   <entry key="zusaetzeVerkaeufer" id="BG-4">Information about the seller</entry>
   <entry key="zusaetzeSteuervertreter" id="BG-11">Tax representative of the seller</entry>
@@ -242,23 +244,17 @@
   <entry key="percentage-format">##0.##</entry>
   <entry key="at-least-two-format">###,##0.#################</entry>
   <!-- New entries needed for HTML localization -->
-  <entry key="Aufschlüsselung der Umsatzsteuer auf Ebene der Rechnung">Sales tax breakdown at invoice level</entry>
-  <entry key="Bemerkung zur Rechnung">Note on the invoice</entry>
-  <entry key="Betreff">Reference</entry>
-  <entry key="Eigenschaften des Artikels">Properties of the item</entry>
-  <entry key="Karteninformation">Card information</entry>
   <entry key="Position">Position</entry>
-  <entry key="Preiseinzelheiten">Price details</entry>
-  <entry key="Skonto; weitere Zahlungsbedingungen">Discount; other payment terms</entry>
-  <entry key="Straße / Hausnummer">Street / House number</entry>
-  <entry key="Summe aller Positionen">Total of all items</entry> <!-- netto in extra Spalte? -->
-  <entry key="Vorausgegangene Rechnungen">Previous invoices</entry>
+  <entry key="Summe aller Positionen">Total of all items</entry> <!-- netto in extra Spalte? -->  
+  
+  <!-- 
   <entry key="Wir übernehmen keine Haftung für die Richtigkeit der Daten.">We assume no liability for the accuracy of the data.</entry> <!-- war auch in der dt. Version aufgeführt -->
-  <entry key="Nachlass auf Ebene der Rechnung">Invoice level discount</entry>
-  <entry key="Zuschlag auf Ebene der Rechnung">Invoice level surcharge</entry>
-  <entry key="Öffnen">Open</entry>  
-  <entry key="Nachlass">Discount</entry> <!-- xr:Document_level_allowance_amount ? -->
-  <entry key="Zuschlag">Surcharge</entry> <!-- xr:Document_level_charge_amount ? -->
-  <entry key="netto">net</entry>
-  <entry key="von">from</entry>
+  -->
+  <entry key="_disclaimer">We assume no liability for the accuracy of the data.</entry>
+  <entry key="_invoice-note-group">Note on the invoice</entry>
+  <entry key="_subject">Subject</entry> <!-- Reference -->
+  <entry key="_open">Open</entry>  
+  <entry key="_net">net</entry>
+  <entry key="_from">from</entry>
+  <entry key="_gross">gross</entry> <!-- BT-112 xr:Invoice_total_amount_with_VAT "Gesamtbetrag brutto" -->
 </properties>
