--- a/src/xsl/l10n/en.xml
+++ b/src/xsl/l10n/en.xml
@@ -9,7 +9,7 @@
   <entry key="xr:Buyer_city" id="BT-52">Location</entry>
   <entry key="xr:Buyer_country_code" id="BT-55">Country code</entry> <!-- Country -->
   <entry key="xr:Buyer_identifier" id="BT-46">Identifier</entry>
-  <entry key="xr:Buyer_identifier/@scheme_identifier" id="BT-46">Scheme identifier</entry>
+  <entry key="xr:Buyer_identifier/@scheme_identifier" id="BT-46_scheme">Scheme identifier</entry>
   <entry key="xr:Buyer_contact_point" id="BT-56">Contact point</entry> <!-- Name -->
   <entry key="xr:Buyer_contact_telephone_number" id="BT-57">Contact point phone</entry> <!-- Phone -->
   <entry key="xr:Buyer_contact_email_address" id="BT-58">Contact point email</entry> <!-- E-Mail address -->
@@ -22,7 +22,7 @@
   <entry key="xr:Seller_country_subdivision" id="BT-39">State</entry>
   <entry key="xr:Seller_country_code" id="BT-40">Country code</entry>
   <entry key="xr:Seller_identifier" id="BT-29">Identifier</entry>
-  <entry key="xr:Seller_identifier/@scheme_identifier" id="BT-29">Scheme identifier</entry>
+  <entry key="xr:Seller_identifier/@scheme_identifier" id="BT-29_scheme">Scheme identifier</entry>
   <entry key="xr:Seller_contact_point" id="BT-41">Contact point</entry> <!-- Name -->
   <entry key="xr:Seller_contact_telephone_number" id="BT-42">Contact point phone</entry> <!-- Phone -->
   <entry key="xr:Seller_contact_email_address" id="BT-43">Contact point email</entry> <!-- E-Mail address -->
@@ -91,13 +91,13 @@
   <!-- BG-4 Seller and others -->
   <entry key="xr:Seller_trading_name" id="BT-28">Different trading name</entry>
   <entry key="xr:Seller_electronic_address" id="BT-34">Electronic address</entry>
-  <entry key="xr:Seller_electronic_address/@scheme_identifier" id="BT-34">Electronic address
+  <entry key="xr:Seller_electronic_address/@scheme_identifier" id="BT-34_scheme">Electronic address
     scheme</entry>
   <entry key="xr:Seller_legal_registration_identifier" id="BT-30">Legal registration identifier</entry> <!-- Register/registration number -->
-  <entry key="xr:Seller_legal_registration_identifier/@scheme_identifier" id="BT-30">Legal registration identifier scheme</entry>
+  <entry key="xr:Seller_legal_registration_identifier/@scheme_identifier" id="BT-30_scheme">Legal registration identifier scheme</entry>
   <entry key="xr:Seller_VAT_identifier" id="BT-31">VAT ID</entry>
   <entry key="xr:Seller_tax_registration_identifier" id="BT-32">Tax number</entry>
-  <entry key="xr:Seller_tax_registration_identifier/@scheme_identifier" id="BT-32">Tax number scheme</entry>
+  <entry key="xr:Seller_tax_registration_identifier/@scheme_identifier" id="BT-32_scheme">Tax number scheme</entry>
   <entry key="xr:Seller_additional_legal_information" id="BT-33">Further legal information</entry>
   <entry key="xr:VAT_accounting_currency_code" id="BT-6">VAT accounting currency</entry> <!--  -->
   <!-- BG 12 and 11 Tax Representative party -->
@@ -114,15 +114,15 @@
   <entry key="xr:Buyer_trading_name" id="BT-45">Different trade name</entry>
   <entry key="xr:Buyer_country_subdivision" id="BT-54">State</entry>
   <entry key="xr:Buyer_electronic_address" id="BT-49">Electronic address</entry>
-  <entry key="xr:Buyer_electronic_address/@scheme_identifier" id="BT-49">Electronic address scheme</entry>
+  <entry key="xr:Buyer_electronic_address/@scheme_identifier" id="BT-49_scheme">Electronic address scheme</entry>
   <entry key="xr:Buyer_legal_registration_identifier" id="BT-47">Legal registration identifier</entry> <!-- Register/registration number -->
-  <entry key="xr:Buyer_legal_registration_identifier/@scheme_identifier" id="BT-47">Legal registration identifier scheme</entry> <!-- Registry/registrar number scheme -->
+  <entry key="xr:Buyer_legal_registration_identifier/@scheme_identifier" id="BT-47_scheme">Legal registration identifier scheme</entry> <!-- Registry/registrar number scheme -->
   <entry key="xr:Buyer_VAT_identifier" id="BT-48">VAT ID</entry>
   <entry key="xr:Value_added_tax_point_date" id="BT-7">Value added tax point date</entry>
   <entry key="xr:Value_added_tax_point_date_code" id="BT-8">Value added tax point date code</entry>
   <entry key="xr:Buyer_accounting_reference" id="BT-19">Buyer accounting reference</entry>
   <entry key="xr:Deliver_to_location_identifier" id="BT-71">Delivery location identifier</entry>
-  <entry key="xr:Deliver_to_location_identifier/@scheme_identifier" id="BT-71">Identification scheme</entry>
+  <entry key="xr:Deliver_to_location_identifier/@scheme_identifier" id="BT-71_scheme">Identification scheme</entry>
   <entry key="xr:Actual_delivery_date" id="BT-72">Delivery date</entry>
   <entry key="xr:Deliver_to_party_name" id="BT-70">Name of the recipient</entry>
   <entry key="xr:Deliver_to_address_line_1" id="BT-75">Addressline 1</entry>
@@ -138,13 +138,13 @@
   <entry key="xr:Business_process_type" id="BT-23">Process identifier</entry>
   <entry key="xr:Specification_identifier" id="BT-24">Specification identifier</entry>
   <entry key="xr:Invoiced_object_identifier" id="BT-18">Object identifier</entry>
-  <entry key="xr:Invoiced_object_identifier/@scheme_identifier" id="BT-18">Object identifier scheme</entry>
+  <entry key="xr:Invoiced_object_identifier/@scheme_identifier" id="BT-18_scheme">Object identifier scheme</entry>
   <!-- BG 10 -->
   <entry key="xr:Payee_name" id="BT-59">Name</entry>
   <entry key="xr:Payee_identifier" id="BT-60">Identifier</entry>
-  <entry key="xr:Payee_identifier/@scheme_identifier" id="BT-60a">Identification scheme</entry>
+  <entry key="xr:Payee_identifier/@scheme_identifier" id="BT-60_scheme">Identification scheme</entry>
   <entry key="xr:Payee_legal_registration_identifier" id="BT-61">Legal registration identifier</entry> <!-- Register/registration number -->
-  <entry key="xr:Payee_legal_registration_identifier/@scheme_identifier" id="BT-61">Legal registration identifier scheme</entry> <!-- Registry/registrar number scheme -->
+  <entry key="xr:Payee_legal_registration_identifier/@scheme_identifier" id="BT-61_scheme">Legal registration identifier scheme</entry> <!-- Registry/registrar number scheme -->
   <!-- BG 24 Additonal supporting Documents -->
   <entry key="xr:Supporting_document_reference" id="BT-122">Identifier</entry>
   <entry key="xr:Supporting_document_description" id="BT-123">Description</entry>
@@ -183,8 +183,8 @@
   <entry key="xr:Item_standard_identifier" id="BT-157_identifier">Item standard identifier</entry>
   <entry key="xr:Item_standard_identifier/@scheme_identifier" id="BT-157_scheme">Item standard <identification></identification> scheme</entry> <!-- Item identification scheme -->
   <entry key="xr:Item_classification_identifier" id="BT-158">Item classification code</entry> <!-- Item classification code -->
-  <entry key="xr:Item_classification_identifier/@scheme_identifier" id="BT-158_identifier">Item classification code scheme</entry>
-  <entry key="xr:Item_classification_identifier/@scheme_version_identifier" id="BT-158_scheme">Version of the item classification code scheme
+  <entry key="xr:Item_classification_identifier/@scheme_identifier" id="BT-158_scheme">Item classification code scheme</entry>
+  <entry key="xr:Item_classification_identifier/@scheme_version_identifier" id="BT-158_scheme_version">Version of the item classification code scheme
     for creating the schema</entry> <!-- Schema version -->
   <entry key="xr:Item_country_of_origin" id="BT-159">Country of origin</entry> <!-- VAT currency code -->
   <entry key="xr:Invoice_line_allowance_base_amount" id="BT-137">Base amount (net)</entry>
